tests/graphql/queries/user/snapshots/root__graphql__queries__user__test__ユーザと紐づく投稿をレスポンスすること.snap
---
source: tests/graphql/queries/user/test.rs
assertion_line: 47
expression: "graphql_req(&app, req_body).await"

---
{
  "data": {
    "user": {
      "id": 1,
      "name": "Aron",
      "posts": [
        {
          "id": 1,
          "title": "Aron - post#1"
        },
        {
          "id": 2,
          "title": "Aron - post#2"
        }
      ]
    }
  }
}
